--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 <body>
   <main>
-    <div class="content-container" role="main">
-      <div class="sedan-container" role="article">
+    <div class="content-container">
+      <div class="sedan-container">
         <img src="images/icon-sedans.svg" alt="Sedan Icon">
         <h2 class="title">Sedans</h2>
         <p class="plain-text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
